# exp-segno-1

./: CMakeLists.txt  README.md
cmake/generic/: antlr.cmake
cmake/segno/: core.cmake
include/exp_live/: live.h
include/exp_py/: inc_nanobind.h
lab/: exp_py.py
lab/lab_helper/: __init__.py
script/segno/: segno_proc.py
script/segno/segno/: debug.py  generator_base.py  generator_cxx_bind_nano.py  generator_cxx_cpp.py  generator_cxx_decl.py  generator_cxx_impl.py  listener.py  sg_field.py  sg_identifier.py  sg_listener.py  sg_listener_debug.py  sg_operator.py  sg_pass.py  sg_translation_unit.py  sg_typename.py  writer_ctx.py
setup/: requirements.py
src/exp_core/: CMakeLists.txt  my_first_test.segno
src/exp_live/: CMakeLists.txt  live.cpp  main.cpp
src/exp_py/: CMakeLists.txt  nanobind.cpp  nanobind_meta.cpp
src/experiment/: my_first_test.segno
src/segno/: CMakeLists.txt  segno_grammar.g4
